refactor: replace master with JDK 17 codebase