@@ -3,11 +3,10 @@ package com.lxzy.nomix.module.im.dal.mysql.conversation;
 import com.lxzy.nomix.framework.test.core.ut.BaseDbUnitTest;
 import com.lxzy.nomix.module.im.dal.dataobject.conversation.ImConversationReadDO;
 import com.lxzy.nomix.module.im.enums.ImConversationTypeEnum;
+import jakarta.annotation.Resource;
 import org.junit.jupiter.api.Test;
 
-import javax.annotation.Resource;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -17,7 +16,7 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * {@link ImConversationReadMapper} 的单元测试
  *
- * @author Nomix
+ * @author Nomix源码
  */
 public class ImConversationReadMapperTest extends BaseDbUnitTest {
 
@@ -87,7 +86,7 @@ public class ImConversationReadMapperTest extends BaseDbUnitTest {
         mapper.insert(buildRead(1L, ImConversationTypeEnum.CHANNEL.getType(), 30L, 3L));
 
         List<ImConversationReadDO> list = mapper.selectListByUserIdAndConversations(
-                1L, ImConversationTypeEnum.CHANNEL.getType(), Arrays.asList(10L, 20L));
+                1L, ImConversationTypeEnum.CHANNEL.getType(), List.of(10L, 20L));
 
         assertEquals(2, list.size());
     }
